# LocalScribe

./: .gitignore  AGENTS.md  AI_PLAN.md  Package.swift  README.md  package-lock.json  package.json  vite.config.ts
Sources/LocalScribeApp/: AppViewModel.swift  ContentView.swift  Info.plist  LocalScribeApp.swift
Sources/LocalScribeApp/Services/: AudioRecorderService.swift  SummarizationService.swift  TranscriptionService.swift
Sources/LocalScribeCore/Services/: AudioRecorderService.swift  SummarizationService.swift  TranscriptionService.swift
Sources/LocalScribeCore/ViewModels/: AppViewModel.swift
Sources/LocalScribeCore/Views/: ContentView.swift
Tests/LocalScribeTests/: AppViewModelTests.swift  AudioRecorderServiceTests.swift  SummarizationServiceTests.swift  TranscriptionServiceTests.swift
docs/guidelines/: PY_MANIFEST.md  RUST_MANIFEST.md  TS_MANIFEST.md
sidecar/: main.py  pyproject.toml  requirements.txt
sidecar/tests/: test_main.py
specs/: contract.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  sidecar.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: db.test.ts  db.ts  recorder.test.ts  recorder.ts  types.ts
