[project]
name = "local-scribe-sidecar"
version = "0.1.0"
description = "Audio transcription sidecar for Local Scribe using SenseVoice"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchaudio",
    "funasr",
    "modelscope",
    "orjson",
    "pyannote-audio>=3.4.0",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "mypy",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
